--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,19 +1,1 @@
-PORT = 4000
-
-DB_URI = 'mongodb://0.0.0.0:27017/Ecommerce'
-
-JWT_SECRET = kflgjhklu45jtkjkJHJKHJHJKH897895tghfg
-JWT_EXPIRE = 5d 
-
-COOKIE_EXPIRE = 5
-
-
-SMPT_SERVICE = gmail
-
-SMPT_MAIL = "edwin225306@gmail.com"
-
-SMPT_PASSWORD = u@wz&N5k46A8cZJ2
-
-SMPT_HOST = "smtp.gmail.com"
-
-SMPT_PORT = "smtp.gmail.com"
+// Config files
